--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@ picture: nike
 ---
 <div class="page-header">
   <h3>Projects</h3>
-  <blockquote><i>Work well with a multi-cultural and diverse work force. Initiative, independent and good communication skill．</i></blockquote>
+  <blockquote><i>Work well with a multi-cultural and diverse work force. Initiative, independent and good communication skill.</i></blockquote>
 </div>
 
 <h4>Machine Learning and NLP Intern</h4>
