--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ the first place
 </strong></a> 
 in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
-<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a> in the second submission. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. And the competition is in progress. We entered the quarter-final successfully. 
+<a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a> in the second submission. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. And the competition is in progress. We entered the Final successfully (A total of 10 teams entered the Finals). 
 </p>
 
 <h4>Recent Highlights</h4>
