--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@ My research interests include Natural Language Processing, Machine Learning and 
 <h4><span style="color: red;">News!</span></h4>
 <p>
 <a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">
-  <h5><span style="color: red;">We won the second place in the finals!</span></h5>
-</strong></a> 
-</p>
-<p>
-During this period, our team won 
-<a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">
-the first place 
+  <h5><span style="color: red;">We won the second place in the finals </span></h5>
 </strong></a> 
 in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
