--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@ My research interests include Natural Language Processing, Machine Learning and 
 <p>
 <a href="http://www.datadreams.org/race-list-4.html"><strong class="color-blue">
   <h5><span style="color: red;">We won the second place in the finals </span></h5>
-</strong></a> 
-in the 
+</strong></a>in the 
 <a href="http://www.datadreams.org/race-race-4.html">Intelligent Investment Adviser Game</a> of the 
 <a href="http://www.datadreams.org/">Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017</a> in the second submission. I was the team leader, my nickname is Boson in this competition. This is one of the competitions about machine learning and NLP in China. 
 </p>
