--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@ My research interests include Natural Language Processing, Machine Learning and 
 
 <h4>Awards</h4>
 <ul>
-  <li>2nd prize Scholarship, Chongqing University (2016).</li>
+  <li><strong>2nd place,</strong> The Intelligent Investment Adviser Game of the Big Data and Artificial Intelligence Innovation and Entrepreneurship Contest of 2017.</li>
+  <li>2nd prize, Scholarship, Chongqing University (2017).</li>
+  <li>2nd prize, Scholarship, Chongqing University (2016).</li>
   <li>2nd prize, Chongqing Division, China Undergraduate Mathematical Contest in Modeling (2013).</li>
   <li>National Endeavor Scholarship (top 5%) (2012).</li>
-  <li>2nd prize Scholarship, Chongqing University (2012).</li>
+  <li>2nd prize, Scholarship, Chongqing University (2012).</li>
 </ul>
 
 <h4>Personal</h4>
