--- a/index.html
+++ b/index.html
@@ -121,5 +121,8 @@ Strong background in programming. With great research enthusiasm and ambition. G
 Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
 </p>
 <p>
+我一直很喜欢这句话：只有足够努力，才能看起来毫不费力。
+</p>
+<p>
 Thank you for visiting.
 </p>
