--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ My research interests include Natural Language Processing, Machine Learning and 
 
 <h4>Personal</h4>
 <p>
-Strong background in programming. With great research enthusiasm and ambition. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
+<strong>Strong background in programming.</strong> With great research enthusiasm and ambition. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
 </p>
 <p>
 Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
