--- a/index.html
+++ b/index.html
@@ -126,3 +126,5 @@ Creative and well-motivated for high-quality research. Work well with a multicul
 <p>
 Thank you for visiting.
 </p>
+
+<a href="https://clustrmaps.com/site/19wsf"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&cl=ffffff" /></a>
