--- a/index.html
+++ b/index.html
@@ -127,4 +127,7 @@ Creative and well-motivated for high-quality research. Work well with a multicul
 Thank you for visiting.
 </p>
 
-<a href="https://clustrmaps.com/site/19wsf"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&cl=ffffff" /></a>
+<div style="width: 500px;">
+  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+</div>
+
