--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@ Creative and well-motivated for high-quality research. Work well with a multicul
 Thank you for visiting.
 </p>
 
-<div style="width: 500px;">
+<div>
   <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+  <a href="https://clustrmaps.com/site/19wsf" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&ct=ffffff" /></a>
 </div>
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+  <a href="https://clustrmaps.com/site/19wsf" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&ct=ffffff" /></a>
 
