--- a/index.html
+++ b/index.html
@@ -113,6 +113,11 @@ My research interests include Natural Language Processing, Machine Learning and 
   <li>2nd prize, Scholarship, Chongqing University (2012).</li>
 </ul>
 
+<h4>SKILLS</h4>
+<p>
+Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
+</p>
+
 <h4>Personal</h4>
 <p>
 <strong>Strong background in programming.</strong> With great research enthusiasm and ambition. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
