--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ My research interests include Natural Language Processing, Machine Learning and 
   <li>2nd prize, Scholarship, Chongqing University (2012).</li>
 </ul>
 
-<h4>SKILLS</h4>
+<h4>Skills</h4>
 <p>
 Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
 </p>
