--- a/papers.html
+++ b/papers.html
@@ -12,3 +12,7 @@ picture: levitated-mass
   {% include paper.html paper=post %}
 {% endfor %}
 
+<div>
+  <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
+</div>
+
