--- a/index.html
+++ b/index.html
@@ -90,11 +90,19 @@ My research interests include Natural Language Processing, Machine Learning and 
 <ul>
   <li>
     <span class="color-blue">Research Intern | 
+    <a href="http://bmi.siat.ac.cn">
+      <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
+    </a>, Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences</span><br/>
+    <strong>Topic:</strong> Natural Language Processing<br/>
+    Dec 2017 - present
+  </li>
+  <li>
+    <span class="color-blue">Research Intern | 
     <a href="http://www.aitech.xin">
       <span class="color-blue">Aizhihui Technology Co., Ltd.</span>
     </a>, Shenzhen, China</span><br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
-    Jul 2016 - present
+    Jul 2016 - Nov 2017
   </li>
   <li>
     <span class="color-blue">Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
