--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ My research interests include Natural Language Processing, Machine Learning and 
     <span class="color-blue">Research Intern | 
     <a href="http://bmi.siat.ac.cn">
       <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
-    </a>, Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences</span><br/>
+    </a>,</span> <span>Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences</span><br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - present
   </li>
