--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@ Welcome Yongbo's homepage.
 
 <h4>Biography</h4>
 <p>
+I am now a visiting student in the Artificial Intelligence and Natural Language Processing team in 
+<a href="http://www.cs.cqu.edu.cn/">Global Center for Big Mobile Intelligence</a> in Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), <a href="http://www.cas.cn">Chinese Academy of Sciences</a>.
+</p>
+<p>
 I'm a M.S. student at the 
 <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a>, 
 Department of Computer Science and Technology, 
