--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ picture: life
 
 <p>
 <!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
-Welcome Yongbo's homepage.
+<span style="text-align: center;font-size: 26px;font-weight: bold;">Welcome Yongbo's homepage!</span>
 </p>
 
 <h4>Biography</h4>
