--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ picture: life
 
 <p>
 <!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
-<div style="text-align: center;font-size: 20px;width: 100%;">Welcome Yongbo's homepage!</div>
+<div style="text-align: center;width: 100%;"><h4>Welcome Yongbo's homepage!</h4></div>
 </p>
 
 <h4>Biography</h4>
