--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 </p>
 
 <h4>Research Interests</h4>
-<blockquote>
+<!-- <blockquote>
   <span style="font-size: 10px; font-style: italic; color: #999;">
     <i>
       Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of 
@@ -69,10 +69,12 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
       in Shenzhen, China. During my internship, I have done much research work on the topics of it.
     </i>
   </span>
-</blockquote>
-<P>
-My research interests include Natural Language Processing, Machine Learning and Deep Learning.
-</P>
+</blockquote> -->
+<ul>
+  <li>Natural Language Processing</li>
+  <li>Machine Learning</li>
+  <li>Deep Learning</li>
+</ul>
 
 <h4><span style="color: red;">News!</span></h4>
 <p>
@@ -110,9 +112,39 @@ My research interests include Natural Language Processing, Machine Learning and 
     Jul 2016 - Nov 2017
   </li>
   <li>
-    <span class="color-blue">Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
+    <span class="color-blue">Web Development Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
+  </li>
+</ul>
+
+<h4>Education</h4>
+<ul>
+  <li>
+    Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences, Dec 2017 - present<br/>
+    Global Center for Big Mobile Intelligence<br/>
+    Visiting student<br/>
+    supervisor: <a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a>
+    research area: Natural Language Processing
+  </li>
+  <li>
+    College of Computer Science, Chongqing University, 2015 - (Expected)2018<br/>
+    School of Software Theory and Technology Chongqing Key Lab<br/>
+    Mphil<br/>
+    supervisor: <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a>
+    research area: Resource scheduling based on Cloud Computing
+  </li>
+  <li>
+    College of Computer Science, Chongqing University, 2011 - 2015<br/>
+    Computer science and technology<br/>
+    Bachelor<br/>
+  </li>
+  <li>
+    School of economics and Business Administration, Chongqing University, 2012 - 2015<br/>
+    Business Administration<br/>
+    Second bachelor's degree<br/>
+    supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a>
+    research area: Performance Management
   </li>
 </ul>
 
@@ -133,7 +165,12 @@ Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Te
 
 <h4>Personal</h4>
 <p>
-<strong>Strong ability of programming and system construction, and skilled operation of Linux system.</strong> With great research enthusiasm and ambition. Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
+<strong>Strong ability of programming and system construction, and skilled operation of Linux system.</strong> Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
+</p>
+<p>
+Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an 
+<strong class="color-blue">intern for over one year</strong> 
+in Shenzhen, China. During my internship, I have done much research work on the topics of it.
 </p>
 <p>
 Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
