--- a/projects.html
+++ b/projects.html
@@ -8,27 +8,41 @@ picture: nike
   <blockquote><i>Work well with a multi-cultural and diverse work force. Initiative, independent and good communication skill.</i></blockquote>
 </div>
 
+<h4>Natural Language Processing Intern</h4>
+<dl class="dl-horizontal">
+  <dt>Dec 2017, Present</dt>
+  <dd>
+    <i>The question answering system of the law</i><br/>
+  The purpose is to make an automatic question answering system based on Chinese law.
+  </dd>
+</dl>
+
 <h4>Machine Learning and NLP Intern</h4>
 <dl class="dl-horizontal">
-  <dt>Nov 2017, Present</dt>
+  <dt>Dec 2017, Present</dt>
+  <dd>
+    <i>The question answering system of the law</i><br/>
+  Full text search of financial news, research reports and announcements of listed companies, and log analysis, the project based on Elasticsearch, Kafka, Logstash, Zookeeper and Kibana, using the company's internal financial dictionary for the word segmentation processing, filtering stop words. This cluster uses 5 virtual machines to store and query data in a distributed way.
+  </dd>
+  <dt>Nov 2017, Nov 2017</dt>
   <dd>
     <i>Full text search engine and ELK log analysis system</i><br/>
   Full text search of financial news, research reports and announcements of listed companies, and log analysis, the project based on Elasticsearch, Kafka, Logstash, Zookeeper and Kibana, using the company's internal financial dictionary for the word segmentation processing, filtering stop words. This cluster uses 5 virtual machines to store and query data in a distributed way.
   </dd>
   <dt>May 2017, Jul 2017</dt>
   <dd>
-  	<i>The Chaorder System</i><br/>
-	Provide Chinese and English event query, A stock market fluctuation, income risk analysis for the B end users, extracting information of subject, predicate, object and time from news. This project Uses NLP, Machine Learning, Word2Vec and ECKGs technologies.
+    <i>The Chaorder System</i><br/>
+  Provide Chinese and English event query, A stock market fluctuation, income risk analysis for the B end users, extracting information of subject, predicate, object and time from news. This project Uses NLP, Machine Learning, Word2Vec and ECKGs technologies.
   </dd>
   <dt>Feb 2017, May 2017</dt>
   <dd>
-  	<i>A chinese version of <a href="http://www.newsreader-project.eu/results/software/">ECKGs</a></i><br/>
-	According to the English ECKGs framework, our group have developed a Chinese version. Using Ltp's open source framework, machine learning and deep learning technology, and the final output of three tuples achieved good results.
+    <i>A chinese version of <a href="http://www.newsreader-project.eu/results/software/">ECKGs</a></i><br/>
+  According to the English ECKGs framework, our group have developed a Chinese version. Using Ltp's open source framework, machine learning and deep learning technology, and the final output of three tuples achieved good results.
   </dd>
   <dt>Aug 2016, Sep 2016</dt>
   <dd>
-  	<i>The AITouJiang based on <a href="https://admin.wechat.com/">Wechat Official Account</a></i><br/>
-  	From drawing up a plan, requirements analysis, prototype design, programming and testing up to deployed.
+    <i>The AITouJiang based on <a href="https://admin.wechat.com/">Wechat Official Account</a></i><br/>
+    From drawing up a plan, requirements analysis, prototype design, programming and testing up to deployed.
   </dd>
 </dl>
 
