--- a/education.html
+++ b/education.html
@@ -10,57 +10,55 @@ picture: nike
 
 <ul>
   <li>
-    Visiting student | 
-    <span class="color-blue">
-      <a href="http://bmi.siat.ac.cn">
-        <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
-      </a>, 
-      <span>
-        Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), 
-        <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
-      </span>, 
-    </span> 
+    <strong>Visiting student</strong> | 
+    <a href="http://bmi.siat.ac.cn">
+      <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
+    </a>, 
+    <span>
+      Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), 
+      <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
+    </span>, 
     Dec 2017 - present<br/>
     <strong>supervisor: </strong><a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a><br/>
     <strong>research area: </strong>Natural Language Processing
   </li>
+  <br/>
+
   <li>
-    Mphil | 
-    <span class="color-blue">
-      <a href="http://www.cs.cqu.edu.cn/">
-        <span class="color-blue">The School of Software Theory and Technology Chongqing Key Lab</span>
-      </a>, 
-      <span>
-        Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
-      </span>, 
-    </span> 
+    <strong>Mphil</strong> | 
+    <a href="http://www.cs.cqu.edu.cn/">
+      <span class="color-blue">The School of Software Theory and Technology Chongqing Key Lab</span>
+    </a>, 
+    <span>
+      Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
+    </span>, 
     2015 - (Expected)2018<br/>
     <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
     <strong>research area: </strong>Resource scheduling based on Cloud Computing
   </li>
-  <li>
-    Bachelor | 
-    <span class="color-blue">
-      <span>
-        The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
-      </span>, 
-    </span> 
-    2011 - 2015<br/>
-  </li>
+  <br/>
 
   <li>
-    Second bachelor's degree | 
-    <span class="color-blue">
-      <span>
-        <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
-      </span>, 
-    </span> 
+    <strong>Bachelor</strong> | 
+    <span>
+      The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
+    </span>, 
+    2011 - 2015
+  </li>
+  <br/>
+
+  <li>
+    <strong>Second bachelor's degree</strong> | 
+    <span>
+      <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
+    </span>, 
     2012 - 2015<br/>
-    <strong>minor: </strong>Business Administration
+    <strong>minor: </strong>Business Administration<br/>
     <strong>supervisor: </strong><a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
     <strong>research area: </strong>Performance Management
   </li>
 </ul>
+<br/>
   
 <div>
   <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=mFaxT5_Gxs_3AlkQfxb75Y66YQz07F4Hybrv8hHCDmI&co=38aafa&cmo=3acc3a&cmn=ff5353&ct=ffffff"></script>
