--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ picture: life
 
 <p>
 <!-- <span style="color: #527bbd;"><strong>Welcome Yongbo's homepage.</strong></span> -->
-<div style="text-align: center;color: #333!important;width: 100%;"><h4>Welcome Yongbo's homepage!</h4></div>
+<div style="text-align: center;color: #333!important;width: 100%;"><h4>Welcome to Yongbo's homepage!</h4></div>
 </p>
 
 <h4>Biography</h4>
@@ -115,36 +115,6 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
     <span class="color-blue">Web Development Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
-  </li>
-</ul>
-
-<h4>Education</h4>
-<ul>
-  <li>
-    Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences, Dec 2017 - present<br/>
-    Global Center for Big Mobile Intelligence<br/>
-    Visiting student<br/>
-    supervisor: <a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a><br/>
-    research area: Natural Language Processing
-  </li>
-  <li>
-    College of Computer Science, Chongqing University, 2015 - (Expected)2018<br/>
-    School of Software Theory and Technology Chongqing Key Lab<br/>
-    Mphil<br/>
-    supervisor: <a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
-    research area: Resource scheduling based on Cloud Computing
-  </li>
-  <li>
-    College of Computer Science, Chongqing University, 2011 - 2015<br/>
-    Computer science and technology<br/>
-    Bachelor
-  </li>
-  <li>
-    School of economics and Business Administration, Chongqing University, 2012 - 2015<br/>
-    Business Administration<br/>
-    Second bachelor's degree<br/>
-    supervisor: <a href="http://ceba.cqu.edu.cn/nry5_1.jsp?urltype=news.NewsContentUrl&wbtreeid=2237&wbnewsid=1567">Prof. Wei Yan</a><br/>
-    research area: Performance Management
   </li>
 </ul>
 
