--- a/education.html
+++ b/education.html
@@ -11,14 +11,12 @@ picture: nike
 <ul>
   <li>
     <strong>Visiting student</strong> | 
-    <a href="http://bmi.siat.ac.cn">
-      <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
-    </a>, 
     <span>
       Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), 
       <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
     </span>, 
     Dec 2017 - present<br/>
+    <strong>lab: </strong><a href="http://bmi.siat.ac.cn">The Global Center for Big Mobile Intelligence (BMI)</a><br/>
     <strong>supervisor: </strong><a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a><br/>
     <strong>research area: </strong>Natural Language Processing
   </li>
@@ -26,13 +24,11 @@ picture: nike
 
   <li>
     <strong>Mphil</strong> | 
-    <a href="http://www.cs.cqu.edu.cn/">
-      <span class="color-blue">The School of Software Theory and Technology Chongqing Key Lab</span>
-    </a>, 
     <span>
       Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
     2015 - (Expected)2018<br/>
+    <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a><br/>
     <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
     <strong>research area: </strong>Resource scheduling based on Cloud Computing
   </li>
@@ -43,12 +39,13 @@ picture: nike
     <span>
       The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
-    2011 - 2015
+    2011 - 2015<br/>
+    <strong>major: </strong>Computer Science and Technology
   </li>
   <br/>
 
   <li>
-    <strong>Second bachelor's degree</strong> | 
+    <strong>Bachelor</strong> | 
     <span>
       <a href="http://ceba.cqu.edu.cn/">The School of economics and Business Administration</a>, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
