--- a/education.html
+++ b/education.html
@@ -25,9 +25,9 @@ picture: nike
   <li>
     <strong>Mphil</strong> | 
     <span>
-      Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
+      The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
-    2015 - (Expected)2018<br/>
+    2015 - 2018 (Expected)<br/>
     <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a><br/>
     <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
     <strong>research area: </strong>Resource scheduling based on Cloud Computing
