--- a/education.html
+++ b/education.html
@@ -23,7 +23,7 @@ picture: nike
   <br/>
 
   <li>
-    <strong>Mphil</strong> | 
+    <strong>MPhil</strong> | 
     <span>
       The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
