--- a/projects.html
+++ b/projects.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Yongbo Wang | projects
-picture: nike
+title: Yongbo Wang | Projects
+picture: code
 ---
 <div class="page-header">
   <h3>Projects</h3>
