--- a/education.html
+++ b/education.html
@@ -28,7 +28,7 @@ picture: nike
       The Department of Computer Science and Technology, Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>)
     </span>, 
     2015 - 2018 (Expected)<br/>
-    <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a><br/>
+    <strong>lab: </strong><a href="http://www.cs.cqu.edu.cn/">The School of Software Theory and Technology Chongqing Key Lab</a>, (recommended postgraduate)<br/>
     <strong>supervisor: </strong><a href="http://yz.cqu.edu.cn/view_teacher.php?tid=14025">Prof. Yunni Xia</a><br/>
     <strong>research area: </strong>Resource scheduling based on Cloud Computing
   </li>
