--- a/projects.html
+++ b/projects.html
@@ -9,6 +9,15 @@ picture: code
 </div>
 
 <h4>Natural Language Processing Intern</h4>
+<blockquote>
+  <span style="font-size: 10px; font-style: italic; color: #999;">
+    <i>
+      At <a href="http://bmi.siat.ac.cn">the Global Center for Big Mobile Intelligence (BMI)</a>, 
+      Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), 
+      <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
+    </i>
+  </span>
+</blockquote>
 <dl class="dl-horizontal">
   <dt>Dec 2017, Present</dt>
   <dd>
@@ -18,6 +27,14 @@ picture: code
 </dl>
 
 <h4>Machine Learning and NLP Intern</h4>
+<blockquote>
+  <span style="font-size: 10px; font-style: italic; color: #999;">
+    <i>
+      At the Machine Learning & NLP group of 
+      <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an intern in Shenzhen, China.
+    </i>
+  </span>
+</blockquote>
 <dl class="dl-horizontal">
   <dt>Nov 2017, Nov 2017</dt>
   <dd>
@@ -42,6 +59,13 @@ picture: code
 </dl>
 
 <h4>Web Developer Intern</h4>
+<blockquote>
+  <span style="font-size: 10px; font-style: italic; color: #999;">
+    <i>
+     At the Chongqing Lingdao Technology Co. Ltd. as an intern in Chongqing, China
+    </i>
+  </span>
+</blockquote>
 <dl class="dl-horizontal">
   <dt>Oct 2015</dt>
   <dd>
