--- a/education.html
+++ b/education.html
@@ -16,7 +16,7 @@ picture: nike
       <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
     </span>, 
     Dec 2017 - present<br/>
-    <strong>lab: </strong><a href="http://bmi.siat.ac.cn">The Global Center for Big Mobile Intelligence (BMI)</a><br/>
+    <strong>lab: </strong>The Global Center for Big Mobile Intelligence (<a href="http://bmi.siat.ac.cn">BMI</a>)<br/>
     <strong>supervisor: </strong><a href="http://bmi.siat.ac.cn/index.php/qu/">Prof. Qiang Qu</a> and <a href="http://minyang.me">Prof. Min Yang</a><br/>
     <strong>research area: </strong>Natural Language Processing
   </li>
