--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,7 @@ picture: code
 <blockquote>
   <span style="font-size: 10px; font-style: italic; color: #999;">
     <i>
-      At <a href="http://bmi.siat.ac.cn">the Global Center for Big Mobile Intelligence (BMI)</a>, 
+      At the Global Center for Big Mobile Intelligence (<a href="http://bmi.siat.ac.cn">BMI</a>), 
       Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), 
       <a href="http://www.cas.cn">Chinese Academy of Sciences</a>
     </i>
