--- a/index.html
+++ b/index.html
@@ -133,18 +133,10 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
 </p>
 
-<h4>Personal</h4>
 <p>
-<strong>Strong ability of programming and system construction, and skilled operation of Linux system.</strong> Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
+<a href="self-evaluation.html"><strong class="color-blue">Self-evaluation (Click).</strong></a>
 </p>
-<p>
-Although I majored in Cloud Computing during my master's degree, I have a strong interest in Natural Language Processing and Machine Learning, and have been working the Machine Learning & NLP group of <a href="http://www.aitech.xin">Aizhihui Technology Co., Ltd.</a> as an 
-<strong class="color-blue">intern for over one year</strong> 
-in Shenzhen, China. During my internship, I have done much research work on the topics of it.
-</p>
-<p>
-Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
-</p>
+
 <p>
 我一直很喜欢这句话：只有足够努力，才能看起来毫不费力。
 </p>
