--- a/self-evaluation.html
+++ b/self-evaluation.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Yongbo Wang | Self-evaluation
-picture: nike
+picture: self
 ---
 <div class="page-header">
   <h3>Education</h3>
