--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ picture: life
       </address>
     </div>
     <div class="col-sm-4">
-      <a href="mailto:yongbowin@outlook.com"><span class="glyphicon glyphicon-envelope"></span></a> Email: yongbowin@outlook.com<br/>
+      <a href="mailto:yongbowin@outlook.com"><span class="glyphicon glyphicon-envelope"></span> Email</a>: yongbowin@outlook.com<br/>
       <a href="tel:+86-13637995210"><span class="glyphicon glyphicon-phone"></span>+86 136 3799 5210</a><br/>
       <a href="http://www.linkedin.com/in/yongbo-wang/">
         <img src="img/ico/linkedin.png" alt=""/>
@@ -133,10 +133,10 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
 </p>
 
+<h4>Others</h4>
 <p>
 <a href="self-evaluation.html"><strong class="color-blue">Self-evaluation (Click).</strong></a>
 </p>
-
 <p>
 我一直很喜欢这句话：只有足够努力，才能看起来毫不费力。
 </p>
