--- a/self-evaluation.html
+++ b/self-evaluation.html
@@ -4,7 +4,7 @@ title: Yongbo Wang | Self-evaluation
 picture: self
 ---
 <div class="page-header">
-  <h3>Education</h3>
+  <h3>Self-evaluation</h3>
   <blockquote><i>Cease to struggle and you cease to live.</i></blockquote>
 </div>
 
