--- a/index.html
+++ b/index.html
@@ -96,23 +96,28 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <h4>Experience</h4>
 <ul>
   <li>
-    <span class="color-blue">Research Intern | 
-    <a href="http://bmi.siat.ac.cn">
-      <span class="color-blue">The Global Center for Big Mobile Intelligence (BMI)</span>
-    </a>,</span> <span>Shenzhen Institutes of Advanced Technology, Chinese Academy of Sciences</span><br/>
+    <span class="color-blue">Research Intern | The Global Center for Big Mobile Intelligence (
+      <a href="http://bmi.siat.ac.cn">
+        <span class="color-blue">BMI</span>
+      </a>),
+    </span> 
+    <span>
+      Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn"><span class="color-blue">SIAT</span></a>), 
+      <a href="http://www.cas.cn"><span class="color-blue">Chinese Academy of Sciences</span></a>
+    </span><br/>
     <strong>Topic:</strong> Natural Language Processing<br/>
     Dec 2017 - present
   </li>
   <li>
-    <span class="color-blue">Research Intern | 
+    <span class="color-blue">Research Intern</span> | 
     <a href="http://www.aitech.xin">
       <span class="color-blue">Aizhihui Technology Co., Ltd.</span>
-    </a>, Shenzhen, China</span><br/>
+    </a>, Shenzhen, China<br/>
     <strong>Topic:</strong> Machine Learning and NLP<br/>
     Jul 2016 - Nov 2017
   </li>
   <li>
-    <span class="color-blue">Web Development Intern | Chongqing Lingdao Technology Co. Ltd., Chongqing, China</span><br/>
+    <span class="color-blue">Web Development Intern</span> | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
   </li>
