--- a/index.html
+++ b/index.html
@@ -96,11 +96,10 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <h4>Experience</h4>
 <ul>
   <li>
-    <span class="color-blue">Research Intern | The Global Center for Big Mobile Intelligence (
-      <a href="http://bmi.siat.ac.cn">
-        <span class="color-blue">BMI</span>
-      </a>),
-    </span> 
+    <span class="color-blue">Research Intern</span> | The Global Center for Big Mobile Intelligence (
+    <a href="http://bmi.siat.ac.cn">
+      <span class="color-blue">BMI</span>
+    </a>),
     <span>
       Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn"><span class="color-blue">SIAT</span></a>), 
       <a href="http://www.cas.cn"><span class="color-blue">Chinese Academy of Sciences</span></a>
