--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
 <h4>Experience</h4>
 <ul>
   <li>
-    <span class="color-blue">Research Intern</span> | The Global Center for Big Mobile Intelligence (
-    <a href="http://bmi.siat.ac.cn">
-      <span class="color-blue">BMI</span>
-    </a>),
+    <strong>Research Intern</strong> | 
+    The Global Center for Big Mobile Intelligence (<a href="http://bmi.siat.ac.cn"><span class="color-blue">BMI</span></a>),
     <span>
       Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn"><span class="color-blue">SIAT</span></a>), 
       <a href="http://www.cas.cn"><span class="color-blue">Chinese Academy of Sciences</span></a>
@@ -108,7 +106,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
     Dec 2017 - present
   </li>
   <li>
-    <span class="color-blue">Research Intern</span> | 
+    <strong>Research Intern</strong> | 
     <a href="http://www.aitech.xin">
       <span class="color-blue">Aizhihui Technology Co., Ltd.</span>
     </a>, Shenzhen, China<br/>
@@ -116,7 +114,7 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
     Jul 2016 - Nov 2017
   </li>
   <li>
-    <span class="color-blue">Web Development Intern</span> | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
+    <strong>Web Development Intern</strong> | Chongqing Lingdao Technology Co. Ltd., Chongqing, China<br/>
     <strong>Topic:</strong> Web Developer<br/>
     Jul 2015 - Oct 2015
   </li>
