--- a/projects.html
+++ b/projects.html
@@ -22,7 +22,7 @@ picture: code
   <dt>Dec 2017, Present</dt>
   <dd>
     <i>The question answering system of the law</i><br/>
-  The purpose is to make an automatic question answering system based on Chinese law.
+  The purpose is to make an automatic question answering system based on Chinese law (on-going).
   </dd>
 </dl>
 
