--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@ picture: life
   <div class="row">
     <div class="col-sm-6">
       <address>
-        <a href="http://www.cs.cqu.edu.cn/">School of Software Theory and Technology Chongqing Key Lab</a><br/>
+        School of Software Theory and Technology Chongqing Key Lab<br/>
         <a href="http://www.cs.cqu.edu.cn/">College of Computer Science</a><br/>
         <a href="http://english.cqu.edu.cn/">Chongqing University</a><br/>
-        <a href="https://en.wikipedia.org/wiki/Chongqing">Shapingba District, Chongqing, China</a><br/>
-        <span style="font-size: 10px; font-style: italic; color: #999;">
+        Shapingba District, Chongqing, China<br/>
+<!--         <span style="font-size: 10px; font-style: italic; color: #999;">
         [ <a href="https://en.wikipedia.org/wiki/Project_211">Project 211</a> and 
         <a href="https://en.wikipedia.org/wiki/Project_985">Project 985</a> members ]<br/>
-        [ Computer science of Chongqing University is the top 1% in the ESI ]<br/></span>
+        [ Computer science of Chongqing University is the top 1% in the ESI ]<br/></span> -->
       </address>
     </div>
     <div class="col-sm-4">
