--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ picture: life
 <h4>Biography</h4>
 <p>
 I am now a visiting student in the Artificial Intelligence and Natural Language Processing team in 
-<a href="http://www.cs.cqu.edu.cn/">Global Center for Big Mobile Intelligence</a> in Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
+Global Center for Big Mobile Intelligence (<a href="http://www.cs.cqu.edu.cn/">BMI</a>) in Shenzhen Institutes of Advanced Technology (<a href="http://www.siat.ac.cn">SIAT</a>), <a href="http://www.cas.cn">Chinese Academy of Sciences</a>, under the supervision of Prof. 
 <a href="http://bmi.siat.ac.cn/index.php/qu/">Qiang Qu</a> and Prof. <a href="http://minyang.me">Min Yang</a> since December 2017.
 </p>
 <p>
@@ -130,17 +130,9 @@ Chongqing University (<a href="http://english.cqu.edu.cn/">CQU</a>), under the s
   <li>2nd prize, Scholarship, Chongqing University (2012).</li>
 </ul>
 
-<h4>Skills</h4>
-<p>
-Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
-</p>
-
 <h4>Others</h4>
 <p>
-<a href="self-evaluation.html"><strong class="color-blue">Self-evaluation (Click).</strong></a>
-</p>
-<p>
-我一直很喜欢这句话：只有足够努力，才能看起来毫不费力。
+Skills and Self-evaluation (<a href="self-evaluation.html"><strong class="color-blue">Click</strong></a>).
 </p>
 <p>
 Thank you for visiting.
