--- a/self-evaluation.html
+++ b/self-evaluation.html
@@ -1,13 +1,19 @@
 ---
 layout: default
-title: Yongbo Wang | Self-evaluation
+title: Yongbo Wang | Skills and Self-evaluation
 picture: self
 ---
 <div class="page-header">
-  <h3>Self-evaluation</h3>
+  <h3>Skills and Self-evaluation</h3>
   <blockquote><i>Cease to struggle and you cease to live.</i></blockquote>
 </div>
 
+<h4>Skills</h4>
+<p>
+Python, Java, Shell, Linux, Docker, Hadoop, HBase, Sqoop, Pig, Elasticsearch, Tensorflow, MySQL,MongoDB, SVN, GitLab, Django, Web frameworks and skills (Django, SpringMVC, Struts2, HTML, Javascript, Ajax).
+</p>
+
+<h4>Self-evaluation</h4>
 <p>
 <strong>Strong ability of programming and system construction, and skilled operation of Linux system.</strong> Good at commonly used Machine Learning algorithms and like to study cutting-edge theories and algorithms for machine learning and deep learning. Master’s candidate in Computer Science with a concentration in Cloud Computing. Double bachelor degree in Computer Science and Business Administration. Sensitive to numbers and good at using math and programming to solve practical problems. In addition, I got the certificate of <a href="http://www.ruankao.org.cn/jsjnew/cms/English/">Network Engineer</a> in May 2014. 
 </p>
@@ -18,6 +24,9 @@ in Shenzhen, China. During my internship, I have done much research work on the 
 </p>
 <p>
 Creative and well-motivated for high-quality research. Work well with a multicultural and diverse work force.
+</p>
+<p>
+我一直很欣赏这句话：只有足够努力，才能看起来毫不费力。
 </p>
 <br/>
   
